--- a/front/src/styles.scss
+++ b/front/src/styles.scss
@@ -1,1 +1,3 @@
+@import './assets/styles/normalize.scss';
 @import './assets/styles/default.scss';
+@import './assets/fonts/fontawesome/css/all.min.css';
