fix(homePage): Ломался адаптив мобилки

--- a/front/src/app/pages/home/home.component.html
+++ b/front/src/app/pages/home/home.component.html
@@ -15,7 +15,7 @@
         [list]="favArtists$ | async"
       ></app-artist-list>
     </div>
-    <div class="home__mobileLogin login" *appPermission="'home_login'">
+    <div class="homePage__mobileLogin login" *appPermission="'home_login'">
       <app-login-block></app-login-block>
     </div>
   </div>
