--- a/front/src/app/pages/home/home.component.scss
+++ b/front/src/app/pages/home/home.component.scss
@@ -27,6 +27,12 @@
       display: none;
     }
   }
+
+  &__mobileLogin {
+    @include Media(smallMobile) {
+      display: none;
+    }
+  }
 }
 
 .livePlay {
